# pa0

./: .gitignore  Makefile  README.md  hw0-warmup.cabal  pa0.cabal  stack.yaml
lib/: Hw0.hs
tests/: GradeScope.hs  Test.hs
