name:                pa0
version:             0.1.0.0
synopsis:            Starter code for cse131 homework/pa0
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Hw0

  -- other-extensions:
  build-depends:       array, base

  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  other-modules:    GradeScope
  build-depends:    base,
                    pa0,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    json,
                    stm,
                    mtl,
                    tagged,
                    containers
